Bug 1680952 - Initialise rv in nsAbOutlookDirectory::GetChildCards() to make 'no cards' work. r=darktrojan